[gd_scene load_steps=19 format=3 uid="uid://bkog6ix1okpgv"]

[ext_resource type="Script" uid="uid://blnjwe7v6r0hf" path="res://PlayerTrevor/Script/player.gd" id="1_dmgeq"]
[ext_resource type="Texture2D" uid="uid://bg35l3u2qnssh" path="res://PlayerTrevor/Sprites/Trevor Only.png" id="1_hoak5"]
[ext_resource type="PackedScene" uid="uid://1estu4y343i3" path="res://PlayerTrevor/Scene/trevor_dash_ghost.tscn" id="2_ea0d3"]
[ext_resource type="Texture2D" uid="uid://s8qa3c8yumis" path="res://PlayerTrevor/Sprites/Trevor Whip.png" id="2_nq6wp"]
[ext_resource type="Texture2D" uid="uid://b40blu80lev78" path="res://FX/shadow.png" id="3_x474h"]

[sub_resource type="Animation" id="Animation_i0tdu"]
resource_name = "Atk1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whip/SpriteWhip:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("whip/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.24, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_next_attack"
}]
}

[sub_resource type="Animation" id="Animation_w5akg"]
resource_name = "Atk2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whip/SpriteWhip:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("whip/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 0.24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_next_attack"
}]
}

[sub_resource type="Animation" id="Animation_hoak5"]
resource_name = "Atk3"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whip/SpriteWhip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("whip/SpriteWhip:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.43, 0.53, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("whip/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.15, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"enable_next_attack"
}, {
"args": [],
"method": &"reset_attack"
}]
}

[sub_resource type="Animation" id="Animation_gssft"]
resource_name = "Dash"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}

[sub_resource type="Animation" id="Animation_4qt7j"]
resource_name = "Death"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}

[sub_resource type="Animation" id="Animation_ea0d3"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}

[sub_resource type="Animation" id="Animation_nq6wp"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whip/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x474h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whip/SpriteWhip:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("whip/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dmgeq"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTrevor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svdwc"]
_data = {
&"Atk1": SubResource("Animation_i0tdu"),
&"Atk2": SubResource("Animation_w5akg"),
&"Atk3": SubResource("Animation_hoak5"),
&"Dash": SubResource("Animation_gssft"),
&"Death": SubResource("Animation_4qt7j"),
&"Hit": SubResource("Animation_ea0d3"),
&"Idle": SubResource("Animation_nq6wp"),
&"RESET": SubResource("Animation_x474h"),
&"Walk": SubResource("Animation_dmgeq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hoak5"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nq6wp"]
radius = 25.02

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ea0d3"]
height = 32.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_mask = 22
motion_mode = 1
script = ExtResource("1_dmgeq")
dash_ghost_node = ExtResource("2_ea0d3")

[node name="SpriteTrevor" type="Sprite2D" parent="."]
texture = ExtResource("1_hoak5")
hframes = 11
vframes = 5
region_rect = Rect2(-1, 0, 102, 102)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.705882)
z_index = -1
position = Vector2(0, 15)
scale = Vector2(0.804688, 0.875)
texture = ExtResource("3_x474h")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_svdwc")
}

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_hoak5")

[node name="whip" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 10

[node name="SpriteWhip" type="Sprite2D" parent="whip"]
texture = ExtResource("2_nq6wp")
hframes = 4
vframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="whip"]
position = Vector2(24, 0)
shape = SubResource("CircleShape2D_nq6wp")
debug_color = Color(0.988481, 0.41553, 0.429554, 0.42)

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionHurtbox" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_ea0d3")

[node name="DashGhostTimer" type="Timer" parent="."]
wait_time = 0.12

[node name="AttackTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
ignore_time_scale = true

[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="whip" to="." method="_on_whip_body_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="DashGhostTimer" to="." method="_on_dash_ghost_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
